Influencer list scrollbar fix

--- a/client/src/Components/Common/Header/Header.module.css
+++ b/client/src/Components/Common/Header/Header.module.css
@@ -8,6 +8,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    background-color: white;
 
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);;
 }
