--- a/client/src/Components/Influencers/Influencers.module.css
+++ b/client/src/Components/Influencers/Influencers.module.css
@@ -1,10 +1,10 @@
 .mainContainer {
     margin-left: 40px;
-    height:100%
+    height: 100%;
+    background-color: #ebe8e9;
 }
 .body {
-    background-color: #ebe8e9;
-    height: 100%;
+
 }
 .channel {
     margin-right: 4px;
